# PokeLance

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  LICENSE  README.md  __main__.py  index.html  mkdocs.yml  mkdocs_R.yml  mkdocs_readthedocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/: dependabot.yml
.github/workflows/: codeql.yml  deploy-docs.yml  format-and-lint.yml  pypi-publish.yml  release-package.yml  release.yml
api_reference/cache/cache/: index.html
api_reference/cache/cache_manager/: index.html
api_reference/constants/: index.html
api_reference/exceptions/: index.html
api_reference/ext/_base/: index.html
api_reference/ext/berry/: index.html
api_reference/ext/contest/: index.html
api_reference/ext/encounter/: index.html
api_reference/ext/evolution/: index.html
api_reference/ext/game/: index.html
api_reference/ext/item/: index.html
api_reference/ext/location/: index.html
api_reference/ext/machine/: index.html
api_reference/ext/move/: index.html
api_reference/ext/pokemon/: index.html
api_reference/http/httpclient/: index.html
api_reference/http/routes/: index.html
api_reference/languages/: index.html
api_reference/logger/: index.html
api_reference/models/abstract/berry/: index.html
api_reference/models/abstract/contest/: index.html
api_reference/models/abstract/encounter/: index.html
api_reference/models/abstract/evolution/: index.html
api_reference/models/abstract/game/: index.html
api_reference/models/abstract/item/: index.html
api_reference/models/abstract/location/: index.html
api_reference/models/abstract/machine/: index.html
api_reference/models/abstract/move/: index.html
api_reference/models/abstract/pokemon/: index.html
api_reference/models/abstract/showdown/: index.html
api_reference/models/abstract/utils/berries/: index.html
api_reference/models/abstract/utils/contests/: index.html
api_reference/models/abstract/utils/evolutions/: index.html
api_reference/models/abstract/utils/games/: index.html
api_reference/models/abstract/utils/items/: index.html
api_reference/models/abstract/utils/locations/: index.html
api_reference/models/abstract/utils/moves/: index.html
api_reference/models/abstract/utils/pokemons/: index.html
api_reference/models/base/: index.html
api_reference/models/common/models/: index.html
api_reference/models/common/resources/: index.html
api_reference/pokelance/: index.html
docs/: index.md  mkdocs.yml  requirements.txt
docs/api_reference/: constants.md  exceptions.md  languages.md  logger.md  pokelance.md
docs/api_reference/cache/: cache.md  cache_manager.md
docs/api_reference/ext/: _base.md  berry.md  contest.md  encounter.md  evolution.md  game.md  item.md  location.md  machine.md  move.md  pokemon.md
docs/api_reference/http/: httpclient.md  routes.md
docs/api_reference/models/: base.md
docs/api_reference/models/abstract/: berry.md  contest.md  encounter.md  evolution.md  game.md  item.md  location.md  machine.md  move.md  pokemon.md  showdown.md
docs/api_reference/models/abstract/utils/: berries.md  contests.md  evolutions.md  games.md  items.md  locations.md  moves.md  pokemons.md
docs/api_reference/models/common/: models.md  resources.md
docs/guide/: advanced_cache.md  basic_usage.md  discord_bot.md  fastapi.md
examples/: basic_usage.py  evolutions.json  evolutions.py
guide/advanced_cache/: index.html
guide/basic_usage/: index.html
guide/discord_bot/: index.html
guide/fastapi/: index.html
pokelance/: __init__.py  client.py  constants.py  exceptions.py  languages.py  logger.py  utils.py
pokelance/cache/: __init__.py  cache.py  cache_manager.py
pokelance/ext/: __init__.py  _base.py  berry.py  contest.py  encounter.py  evolution.py  game.py  item.py  location.py  machine.py  move.py  pokemon.py
pokelance/http/: __init__.py  endpoints.py
pokelance/models/: __init__.py  _base.py
pokelance/models/abstract/: __init__.py  berry.py  contest.py  encounter.py  evolution.py  game.py  item.py  location.py  machine.py  move.py  pokemon.py  showdown.py
pokelance/models/abstract/utils/: __init__.py  berries.py  contests.py  evolutions.py  games.py  items.py  locations.py  moves.py  pokemons.py
pokelance/models/common/: __init__.py  models.py  resources.py
search/: search_index.json
templates/: custom.jinja2  macros.jinja2
tests/: conftest.py  test_cache.py  test_client.py
