[tool.poetry]
name = "pokelance"
version = "0.2.5"
description = "A flexible and easy to use pokemon library."
authors = ["FallenDeity <61227305+FallenDeity@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.3"
aiofiles = "^23.1.0"
types-aiofiles = "^23.1.0.1"
attrs = "^23.1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.10.1"
ruff = ">=0.0.171,<0.1.9"
pygments = "^2.13.0"
mkdocs = "^1.4.1"
mkdocstrings = {extras = ["python"], version = ">=0.19,<0.25"}
mkdocs-material = "^8.5.7"
typing-extensions = "^4.4.0"
pre-commit = "^2.20.0"
Pillow = ">=9.3,<11.0"
CairoSVG = "^2.5.2"
mypy = ">=0.991,<1.8"
pipwin = "^0.5.2"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
auto-changelog = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["pokelance"]

[tool.mypy]
python_version = 3.8
strict = true
